--- a/html/index.html
+++ b/html/index.html
@@ -12,22 +12,41 @@
 </head>
 <body>
 
-  <header class="main-header">
-    <h2 class="sitelogo" id="logo"><a href="">Mark Sweet</a></h2>
+  <!-- <header class="main-header">
+    <h2 class="sitelogo" id="logo"><a href="#">Mark Sweet</a></h2>
     <ul class="nav">
-      <li class="navitem"><a href="">Projects</a></li>
+      <li class="navitem"><a href="protfolio.html">Projects</a></li>
       <li class="navitem"><a href="">About</a></li>
-      <li class="navitem"><a href="contact.htmlh">Contact</a></li>
+      <li class="navitem"><a href="">Contact</a></li>
     </ul>
-  </header>
+  </header> -->
 
   <div class="comp">
-    <div class="laptop">
-      <div class="top"></div>
-      <div class="base"></div>
+
+    <div class="sections section1">
+      <div class="laptop">
+        <div class="top"></div>
+        <div class="base"></div>
+      </div>
+      <h2 class="labels projects-label">Projects</h2>
     </div>
-    <div class="tablet"></div>
-    <div class="phone"></div>
+
+    <hr class="hr-section">
+
+    <div class="sections section2">
+      <div class="tablet">
+        <p>Hello, World!</p>
+      </div>
+      <h2 class="labels about-label">About</h2>
+    </div>
+
+    <hr class="hr-section">
+
+    <div class="sections section3">
+      <div class="phone"></div>
+      <h2 class="labels contact-label">Contact</h2>
+    </div>
+
   </div>
 
   <script src="../js/script.js"></script>
